# audiogesture

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
include/audiogesture/: AudioGestureServer.h  AudioGestureTrainer.h  AudioInput.h  Bextract.h  CollectionGenerator.h  CompareNatural.h  DataTransformer.h  DataVisualizer.h  FeatureNormalizer.h  FunctionExtractor.h  GestureKinectInput.h  GestureOutput.h  GesturePublisher.h  GestureReceiver.h  GestureTest.h  GestureVisualizer.h  MusicExtractor.h  MusicExtractorBuffer.h  OutputRecorder.h  PCAExtractor.h  PCARegression.h  Sample.h  SampleListener.h  SamplePlayer.h  WekaSink.h  bextract.h
launch/: audiogesture.launch  complete.launch  data.launch  extract.launch  perform.launch  radiophonic.launch  server.launch  test.launch  train.launch  visualize.launch
msg/: DataFile.msg  GestureVector.msg  MagnitudeRecord.msg  OutputRecord.msg  PlayerCommand.msg  ProcessedOutput.msg  Strings.msg
msg_gen/cpp/include/audiogesture/: ExtractorStatus.h  FeatureVector.h  PlayerCommand.h  ProcessedOutput.h  Strings.h  TrainerLogStatus.h  TrainerStatus.h
msg_gen/lisp/: ExtractorStatus.lisp  FeatureVector.lisp  PlayerCommand.lisp  ProcessedOutput.lisp  Strings.lisp  TrainerLogStatus.lisp  TrainerStatus.lisp  _package.lisp  _package_ExtractorStatus.lisp  _package_FeatureVector.lisp  _package_PlayerCommand.lisp  _package_ProcessedOutput.lisp  _package_Strings.lisp  audiogesture-msg.asd
music/: bextract_single.mf  music.mf
music2/: bextract_single.mf  music.mf
nbproject/: configurations.xml  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  configurations.xml  private.xml
src/: AudioGestureServer.cpp  AudioGestureTrainer.cpp  AudioInput.cpp  Bextract.cpp  CollectionGenerator.cpp  DataTransformer.cpp  DataVisualizer.cpp  FeatureNormalizer.cpp  FunctionExtractor.cpp  GestureKinectInput.cpp  GestureOutput.cpp  GesturePublisher.cpp  GestureReceiver.cpp  GestureTest.cpp  GestureVisualizer.cpp  MusicExtractor.cpp  MusicExtractorBuffer.cpp  OutputRecorder.cpp  PCAExtractor.cpp  PCARegression.cpp  SampleListener.cpp  SamplePlayer.cpp  WekaSink.cpp  bextract.cpp  main.cpp  music_extractor.cpp  sample_listener.cpp
src/audiogesture/msg/: _ExtractorStatus.py  _FeatureVector.py  _PlayerCommand.py  _ProcessedOutput.py  _Strings.py  _TrainerLogStatus.py  _TrainerStatus.py  __init__.py
src/audiogesture/srv/: _Bextract.py  _Bextractor.py  _GetFile.py  _GetSampleFile.py  _GetSamples.py  _MusicExtractor.py  __init__.py
srv/: GetSampleFile.srv  GetSamples.srv  MusicExtractor.srv  SetDimensions.srv
srv_gen/cpp/include/audiogesture/: Bextractor.h  GetFile.h  GetSampleFile.h  GetSamples.h  MusicExtractor.h
srv_gen/lisp/: Bextract.lisp  Bextractor.lisp  GetFile.lisp  GetSampleFile.lisp  GetSamples.lisp  MusicExtractor.lisp  _package.lisp  _package_GetFile.lisp  _package_GetSamples.lisp  _package_MusicExtractor.lisp  audiogesture-srv.asd
